<?xml version="1.0"?>
<package>
  <name>turtlebot_android</name>
  <version>0.0.0</version>
  <description>
    This stack contains applications for turtlebot.
  </description>
  <url>http://ros.org/wiki/turtlebot_android</url>
  <maintainer email="jorge@yujinrobot.com">Jorge Santos</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosjava_tools</build_depend>
  <build_depend>android_osrf</build_depend>
  <build_depend>android_apps</build_depend>

  <run_depend>rosjava_tools</run_depend>
  <run_depend>android_osrf</run_depend>
  <run_depend>android_apps</run_depend>

</package>

